--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="id">
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.0/dist/jszip.min.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Stego-Web — Simple (Vanilla JS)</title>
